--- a/projects/04/package.json
+++ b/projects/04/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "03",
+	"name": "04",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -9,21 +9,22 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"eslint-plugin-react-hooks": "5.0.0-next-56a3c18e5-20230314",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
-		"typescript": "^4.9.3",
-		"vite": "^4.1.0",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
-		"@vitejs/plugin-react-swc": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.55.0",
 		"@typescript-eslint/parser": "^5.55.0",
+		"@vitejs/plugin-react": "^3.0.0",
 		"eslint": "^8.36.0",
-		"prettier": "^2.8.4",
 		"eslint-config-prettier": "^8.7.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.32.2"
+		"eslint-plugin-react": "^7.32.2",
+		"prettier": "^2.8.4",
+		"typescript": "^4.9.3",
+		"vite": "^4.1.0"
 	}
 }
